fixed navbar overflow and scrolling, modified hero image length for desktop resolutions

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -29,3 +29,11 @@ body {
   box-sizing: border-box;
   overflow-x: hidden; 
 }
+
+html,body
+{
+    width: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
