--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -67,6 +67,7 @@
     align-items: center;
     max-width: 430px;
     margin: 0 auto 3rem auto;
+    padding: 0 1rem;
 
     &__item {
 
