--- a/sass/pages/home/_hero.scss
+++ b/sass/pages/home/_hero.scss
@@ -87,15 +87,15 @@
       position: absolute;
       max-width: 100%;
       width: 622.5px;
-      height: 675px;
-      top: 0;
+      height: 720px;
+      top: 20px;
       right: 0;
     }
 
     @media only screen and (min-width: 90em) {
       width: 664px;
-      height: 768px;
-      top: 30px;
+      height: 900px;
+      top: -30px;
       right: 170px;
     }
 
